# cmake_catch2_app_example

./: CMakeLists.txt
app/: main.cpp
include/: lib.hpp
src/: lib.cpp
test/: lib.cpp
